Add new files and update dependencies

--- a/src/amisui/templates/app.jinja2
+++ b/src/amisui/templates/app.jinja2
@@ -11,6 +11,8 @@
     <link href="{{ cdn }}/amis@{{ version }}/sdk/helper.css" rel="stylesheet"/>
     <link href="{{ cdn }}/amis@{{ version }}/sdk/iconfont.css" rel="stylesheet"/>
     <script src="{{ cdn }}/amis@{{ version }}/sdk/sdk.js"></script>
+    <script src="{{ cdn }}/amis@{{ version }}/sdk/json-view.js"></script>
+    <script src="{{ cdn }}/amis@{{ version }}/sdk/markdown.js"></script>
     <script src="{{ cdn }}/vue@2/dist/vue.js"></script>
     <script src="{{ cdn }}/history@{{ version }}"></script>
     <style>
